Added alpha-template for grid + container class

--- a/design-project.html
+++ b/design-project.html
@@ -2,14 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Placeholder</title>
     <!--google font load-out -->
     <link href="https://fonts.googleapis.com/css?family=Abel|Anton&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/design-project.css">
+
+    <script src="https://kit.fontawesome.com/7a21f128e2.js" crossorigin="anonymous"></script>
 
 
 </head>
 <body>
 
+<nav></nav>
+
+<header></header>
+
+<div class="container">
+    <section>
+
+    </section>
+</div>
 </body>
 </html>
