working logo and codeup design title positioned

--- a/design-project.html
+++ b/design-project.html
@@ -14,14 +14,21 @@
 </head>
 <body>
 
-<nav></nav>
+<nav id="#navbar"></nav>
 
 <header></header>
 
-<div class="container">
-    <section>
+<div id="main-content" class="container">
+    <!-- white space + logo containers   -->
+    <div id="header-logo">
+        <div id="boxlogo">
+            <img id="logoimg" src="img/logo.jpg">
+        </div>
+    </div>
 
-    </section>
+
+        <p id="titlexs">codeup design</p>
+
 </div>
 </body>
 </html>
