Mobile nav area set + Headers set

--- a/design-project.html
+++ b/design-project.html
@@ -14,8 +14,6 @@
 </head>
 <body>
 
-<nav id="#navbar"></nav>
-
 <header></header>
 
 <div id="main-content" class="container">
@@ -26,8 +24,21 @@
         </div>
     </div>
 
+    <p id="titlexs">codeup design</p>
 
-        <p id="titlexs">codeup design</p>
+    <nav id="native-nav">
+        <p>Services, work, blog, contact</p>
+    </nav>
+
+    <section id="company-ad">
+        <h2>
+            VISUAL DESIGN & WEB DEVELOPMENT
+        </h2>
+
+        <h4>
+            FROM PARK CITY, UTAH
+        </h4>
+    </section>
 
 </div>
 </body>
