working circles with positioning and colors/borders

--- a/design-project.html
+++ b/design-project.html
@@ -38,6 +38,15 @@
         <h4>
             FROM PARK CITY, UTAH
         </h4>
+        <div id="containerh">
+           <div id="circlecont">
+            <div class="circle red"><p>DESIGN</p></div>
+            <div class="circle orange"><p>DEVELOP</p></div>
+            <div class="circle green"><p>SUPPORT</p></div>
+            <div class="circle blue"><p>HOST</p></div>
+           </div>
+        </div>
+
     </section>
 
 </div>
