Completed selected work section

--- a/design-project.html
+++ b/design-project.html
@@ -46,8 +46,26 @@
             <div class="circle blue"><p>HOST</p></div>
            </div>
         </div>
-
     </section>
+
+    <p id="featured-title" class="abel">SELECTED WORK</p>
+    
+    <div id="project-image-container">
+        <img src="img/apple-ipad.jpg" alt="">
+    </div>
+
+    <div id="featured-project-info">
+
+        <p id="featured-project-title" class="abel">FEATURED PROJECT</p>
+
+        <div id="specs-container">
+            <div class="feature-project-specs red">D</div>
+            <div class="feature-project-specs orange">D</div>
+            <div class="feature-project-specs green">S</div>
+            <div class="feature-project-specs blue">H</div>
+        </div>
+
+    </div>
 
 </div>
 </body>
