Changed header-logo -> header-logo-container

--- a/design-project.html
+++ b/design-project.html
@@ -18,7 +18,7 @@
 
 <div id="main-content" class="container">
     <!-- white space + logo containers   -->
-    <div id="header-logo">
+    <div id="header-logo-container">
         <div id="boxlogo">
             <img id="logoimg" src="img/logo.jpg">
         </div>
