first break point initiated and working through final grid set up

--- a/design-project.html
+++ b/design-project.html
@@ -31,7 +31,7 @@
     </nav>
 
     <section id="company-ad">
-        <h2>
+        <h2 id="visualdesign">
             VISUAL DESIGN & WEB DEVELOPMENT
         </h2>
 
@@ -46,6 +46,8 @@
             <div class="circle blue"><p>HOST</p></div>
            </div>
         </div>
+        <hr>
+
     </section>
 
     <p id="featured-title" class="abel">SELECTED WORK</p>
