med display layout functional

--- a/design-project.html
+++ b/design-project.html
@@ -58,47 +58,87 @@
         <hr>
     </section>
 
-    <p id="selected-featured-title" class="abel">
-        SELECTED WORK
-    </p>
-    
-<!--    <div id="project-image-container">-->
-<!--        <img src="img/apple-ipad.jpg" alt="">-->
-<!--    </div>-->
+    <div id="med-grid">
 
-<!--    <div id="featured-project-info">-->
+            <p id="selected-featured-title" class="abel">
+                SELECTED WORK
+            </p>
 
-<!--        <div id="project-image-container">-->
-<!--            <img src="img/apple-ipad.jpg" alt="">-->
-<!--        </div>-->
+            <div id="featured-projects-container">
 
-<!--        <p id="featured-project-title" class="abel">FEATURED PROJECT</p>-->
+                <section class="featured-project-card" id="featured-project-1">
+                    <img src="img/apple-ipad.jpg" alt="" class="featured-project-image" id="featured-project-image-1">
+                    <span class="featured-project-name" id="featured-project-name-1">
+                        FEATURED PROJECT
+                    </span>
+                    <div class="featured-pillar-container" id="featured-pillar-container-1">
+                        <div class="featured-pillar anton red">D</div>
+                        <div class="featured-pillar anton orange">D</div>
+                        <div class="featured-pillar anton green">S</div>
+                        <div class="featured-pillar anton blue">H</div>
+                    </div>
+                </section>
 
-<!--        <div id="specs-container">-->
-<!--            <div class="feature-project-specs red">D</div>-->
-<!--            <div class="feature-project-specs orange">D</div>-->
-<!--            <div class="feature-project-specs green">S</div>-->
-<!--            <div class="feature-project-specs blue">H</div>-->
-<!--        </div>-->
+                <section class="featured-project-card" id="featured-project-2">
+                    <img src="img/macbook.jpg" alt="" class="featured-project-image" id="featured-project-image-2">
+                    <span class="featured-project-name" id="featured-project-name-2">
+                        FEATURED PROJECT
+                    </span>
+                    <div class="featured-pillar-container" id="featured-pillar-container-2">
+                        <div class="featured-pillar anton red">D</div>
+                        <div class="featured-pillar anton orange">D</div>
+                        <div class="featured-pillar anton green">S</div>
+                        <div class="featured-pillar anton blue">H</div>
+                    </div>
+                </section>
 
-<!--    </div>-->
+                <section class="featured-project-card" id="featured-project-3">
+                    <img src="img/man.jpg" alt="" class="featured-project-image" id="featured-project-image-3">
+                    <span class="featured-project-name" id="featured-project-name-3">
+                        FEATURED PROJECT
+                    </span>
+                    <div class="featured-pillar-container" id="featured-pillar-container-3">
+                        <div class="featured-pillar anton red">D</div>
+                        <div class="featured-pillar anton orange">D</div>
+                        <div class="featured-pillar anton green">S</div>
+                        <div class="featured-pillar anton blue">H</div>
+                    </div>
+                </section>
 
-    <div id="featured-projects-container">
+                <section class="featured-project-card" id="featured-project-4">
+                    <img src="img/security.jpg" alt="" class="featured-project-image" id="featured-project-image-4">
+                    <span class="featured-project-name" id="featured-project-name-4">
+                        FEATURED PROJECT
+                    </span>
+                    <div class="featured-pillar-container" id="featured-pillar-container-4">
+                        <div class="featured-pillar anton red">D</div>
+                        <div class="featured-pillar anton orange">D</div>
+                        <div class="featured-pillar anton green">S</div>
+                        <div class="featured-pillar anton blue">H</div>
+                    </div>
+                </section>
+            </div>
 
-        <section class="featured-project-card" id="featured-project-1">
-            <img src="img/apple-ipad.jpg" alt="" class="featured-project-image" id="featured-project-image-1">
-            <span class="featured-project-name" id="featured-project-name-1">
-                FEATURED PROJECT
-            </span>
-            <div class="featured-pillar-container" id="featured-pillar-container-1">
-                <div class="featured-pillar anton red">D</div>
-                <div class="featured-pillar anton orange">D</div>
-                <div class="featured-pillar anton green">S</div>
-                <div class="featured-pillar anton blue">H</div>
+
+    <!--    medium screen lower right news feed area -->
+        <section id="news-f-container">
+
+            <span id="feed-title" class="abel">THE LAST</span>
+
+            <div id="news-feed">
+
+                <div><img src="img/mobile-phone.jpg"><span>THE ADMIN BAR AND ABSOLUTE POSITIONING</span></div>
+
+                <div><img src="img/head.jpg"><span>NIBBLER AWESOME WEBSITE TESTING</span></div>
+
+                <div><img src="img/ipad.jpg"><span>HOW TO GET GOOGLE TO LIKE YOU</span></div>
+
+                <div><i class="fab fa-twitter"></i><span>LAST TWEET</span>
+                <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.”</p>
+                </div>
             </div>
         </section>
     </div>
-
 </main>
 </body>
 </html>
