--- a/design-project.html
+++ b/design-project.html
@@ -18,7 +18,7 @@
 
     <header id="header-container">
         <div id="logo-container">
-            <img id="logo" src="img/logo.jpg">
+            <img id="logo" src="img/logo-transparent.png">
         </div>
     </header>
 
