Spaced out div elements in .html id= news-feed

--- a/design-project.html
+++ b/design-project.html
@@ -119,22 +119,32 @@
                 </section>
             </div>
 
-
-    <!--    medium screen lower right news feed area -->
+    <!--    NEWS FEED AREA -->
         <section id="news-f-container">
 
             <span id="feed-title" class="abel">THE LAST</span>
 
             <div id="news-feed">
 
-                <div><img src="img/mobile-phone.jpg"><span>THE ADMIN BAR AND ABSOLUTE POSITIONING</span></div>
+                <div>
+                    <img src="img/mobile-phone.jpg">
+                    <span>THE ADMIN BAR AND ABSOLUTE POSITIONING</span>
+                </div>
 
-                <div><img src="img/head.jpg"><span>NIBBLER AWESOME WEBSITE TESTING</span></div>
+                <div>
+                    <img src="img/head.jpg">
+                    <span>NIBBLER AWESOME WEBSITE TESTING</span>
+                </div>
 
-                <div><img src="img/ipad.jpg"><span>HOW TO GET GOOGLE TO LIKE YOU</span></div>
+                <div>
+                    <img src="img/ipad.jpg">
+                    <span>HOW TO GET GOOGLE TO LIKE YOU</span>
+                </div>
 
-                <div><i class="fab fa-twitter"></i><span>LAST TWEET</span>
-                <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.”</p>
+                <div>
+                    <i class="fab fa-twitter"></i>
+                    <span>LAST TWEET</span>
+                    <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.”</p>
                 </div>
             </div>
         </section>
