Adjusted news-feed

--- a/design-project.html
+++ b/design-project.html
@@ -120,31 +120,31 @@
             </div>
 
     <!--    NEWS FEED AREA -->
-        <section id="news-f-container">
+        <span id="feed-title" class="abel">THE LAST</span>
 
-            <span id="feed-title" class="abel">THE LAST</span>
+        <section id="news-f-container">
 
             <div id="news-feed">
 
                 <div>
                     <img src="img/mobile-phone.jpg">
-                    <span>THE ADMIN BAR AND ABSOLUTE POSITIONING</span>
+                    <span class="anton">THE ADMIN BAR AND ABSOLUTE POSITIONING</span>
                 </div>
 
                 <div>
                     <img src="img/head.jpg">
-                    <span>NIBBLER AWESOME WEBSITE TESTING</span>
+                    <span class="anton">NIBBLER AWESOME WEBSITE TESTING</span>
                 </div>
 
                 <div>
                     <img src="img/ipad.jpg">
-                    <span>HOW TO GET GOOGLE TO LIKE YOU</span>
+                    <span class="anton">HOW TO GET GOOGLE TO LIKE YOU</span>
                 </div>
 
-                <div>
+                <div id="twitter-feed">
                     <i class="fab fa-twitter"></i>
                     <span>LAST TWEET</span>
-                    <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.”</p>
+                    <p  class="abel">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.”</p>
                 </div>
             </div>
         </section>
