up to medium display working

--- a/design-project.html
+++ b/design-project.html
@@ -18,6 +18,7 @@
 
     <header id="header-container">
         <div id="logo-container">
+            <span id="medhead" class="abel">codeup design</span>
             <img id="logo" src="img/logo-transparent.png">
         </div>
     </header>
@@ -126,26 +127,31 @@
 
             <div id="news-feed">
 
-                <div>
+<!--                <div>-->
                     <img src="img/mobile-phone.jpg">
                     <span class="anton">THE ADMIN BAR AND ABSOLUTE POSITIONING</span>
-                </div>
+<!--                </div>-->
 
-                <div>
+<!--                <div>-->
                     <img src="img/head.jpg">
                     <span class="anton">NIBBLER AWESOME WEBSITE TESTING</span>
-                </div>
+<!--                </div>-->
 
-                <div>
+<!--                <div>-->
                     <img src="img/ipad.jpg">
                     <span class="anton">HOW TO GET GOOGLE TO LIKE YOU</span>
-                </div>
+<!--                </div>-->
 
-                <div id="twitter-feed">
-                    <i class="fab fa-twitter"></i>
-                    <span>LAST TWEET</span>
-                    <p  class="abel">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.”</p>
-                </div>
+<!--                <div id="twitter-feed">-->
+<!--                    <i class="fab fa-twitter"></i>-->
+<!--                    <span>LAST TWEET</span>-->
+<!--                    <p  class="abel">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.”</p>-->
+<!--                </div>-->
+            </div>
+            <div id="twitter-feed">
+                <i class="fab fa-twitter"></i>
+                <span>LAST TWEET</span>
+                <p  class="abel">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.”</p>
             </div>
         </section>
     </div>
