working through large navbar next

--- a/design-project.html
+++ b/design-project.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-<!--<div id="large-breakpoint-container">-->
+<div id="large-breakpoint-container">
 <main id="main-content">
 
     <header id="header-container">
@@ -156,6 +156,6 @@
         </section>
     </div>
 </main>
-<!--</div>-->
+</div>
 </body>
 </html>
