small nav complete

--- a/design-project.html
+++ b/design-project.html
@@ -26,7 +26,24 @@
     <span id="company-name">codeup design</span>
 
     <nav id="native-nav">
-        <p>Services, work, blog, contact</p>
+        <ul id="native-nav-list">
+            <li>
+                <a href="" class="abel">SERVICES</a>
+            </li>
+
+            <li>
+                <a href="" class="abel">WORK</a>
+            </li>
+
+            <li>
+                <a href=""  class="abel">BLOG</a>
+            </li>
+
+            <li>
+                <a href=""  class="abel">CONTACT</a>
+            </li>
+        </ul>
+<!--        <p>Services, work, blog, contact</p>-->
     </nav>
 
     <section id="company-about-container">
