--- a/design-project.html
+++ b/design-project.html
@@ -14,69 +14,88 @@
 </head>
 <body>
 <div id="large-breakpoint-container">
-<main id="main-content">
+    <main id="main-content">
 
-    <header id="header-container">
-        <div id="logo-container">
-            <span id="medhead" class="abel">codeup design</span>
-            <img id="logo" src="img/logo-transparent.png">
-        </div>
-    </header>
+        <header id="header-container">
+            <div id="logo-container">
+                <span id="medhead" class="abel">codeup design</span>
+                <img id="logo" src="img/logo-transparent.png">
 
-    <span id="company-name">codeup design</span>
+                <nav class="nav-style" id="nav-view">
+                    <ul id="nav-view-list">
+                        <li>
+                            <a href="" class="abel">SERVICES</a>
+                        </li>
 
-    <nav id="native-nav">
-        <ul id="native-nav-list">
-            <li>
-                <a href="" class="abel">SERVICES</a>
-            </li>
+                        <li>
+                            <a href="" class="abel">WORK</a>
+                        </li>
 
-            <li>
-                <a href="" class="abel">WORK</a>
-            </li>
+                        <li>
+                            <a href="" class="abel">BLOG</a>
+                        </li>
 
-            <li>
-                <a href=""  class="abel">BLOG</a>
-            </li>
+                        <li>
+                            <a href="" class="abel">CONTACT</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
 
-            <li>
-                <a href=""  class="abel">CONTACT</a>
-            </li>
-        </ul>
-<!--        <p>Services, work, blog, contact</p>-->
-    </nav>
+        <span id="company-name">codeup design</span>
 
-    <section id="company-about-container">
+        <nav class="nav-style" id="native-nav">
+            <ul id="native-nav-list">
+                <li>
+                    <a href="" class="abel">SERVICES</a>
+                </li>
 
-        <h2 id="company-page-title">
-            VISUAL DESIGN & WEB DEVELOPMENT
-        </h2>
+                <li>
+                    <a href="" class="abel">WORK</a>
+                </li>
 
-        <h4 id="company-location-header">
-            FROM PARK CITY, UTAH
-        </h4>
+                <li>
+                    <a href="" class="abel">BLOG</a>
+                </li>
 
-        <div id="pillar-container">
-           <div id="pillar-div-list">
-               <div class="pillar red">
-                   <span class="pillar-text">DESIGN</span>
-               </div>
-               <div class="pillar orange">
-                   <span class="pillar-text">DEVELOP</span>
-               </div>
-               <div class="pillar green">
-                   <span class="pillar-text">SUPPORT</span>
-               </div>
-               <div class="pillar blue">
-                   <span class="pillar-text">HOST</span>
-               </div>
-           </div>
-        </div>
+                <li>
+                    <a href="" class="abel">CONTACT</a>
+                </li>
+            </ul>
+        </nav>
 
-        <hr>
-    </section>
+        <section id="company-about-container">
 
-    <div id="med-grid">
+            <h2 id="company-page-title">
+                VISUAL DESIGN & WEB DEVELOPMENT
+            </h2>
+
+            <h4 id="company-location-header">
+                FROM PARK CITY, UTAH
+            </h4>
+
+            <div id="pillar-container">
+                <div id="pillar-div-list">
+                    <div class="pillar red">
+                        <span class="pillar-text">DESIGN</span>
+                    </div>
+                    <div class="pillar orange">
+                        <span class="pillar-text">DEVELOP</span>
+                    </div>
+                    <div class="pillar green">
+                        <span class="pillar-text">SUPPORT</span>
+                    </div>
+                    <div class="pillar blue">
+                        <span class="pillar-text">HOST</span>
+                    </div>
+                </div>
+            </div>
+
+            <hr>
+        </section>
+
+        <div id="med-grid">
 
             <p id="selected-featured-title" class="abel">
                 SELECTED WORK
@@ -137,42 +156,43 @@
                 </section>
             </div>
 
-    <!--    NEWS FEED AREA -->
-        <span id="feed-title" class="abel">THE LAST</span>
+            <!--    NEWS FEED AREA -->
+            <span id="feed-title" class="abel">THE LAST</span>
 
-        <section id="news-f-container">
+            <section id="news-f-container">
 
-            <div id="news-feed">
+                <div id="news-feed">
 
-<!--                <div>-->
+                    <!--                <div>-->
                     <img src="img/mobile-phone.jpg">
                     <span class="anton">THE ADMIN BAR AND ABSOLUTE POSITIONING</span>
-<!--                </div>-->
+                    <!--                </div>-->
 
-<!--                <div>-->
+                    <!--                <div>-->
                     <img src="img/head.jpg">
                     <span class="anton">NIBBLER AWESOME WEBSITE TESTING</span>
-<!--                </div>-->
+                    <!--                </div>-->
 
-<!--                <div>-->
+                    <!--                <div>-->
                     <img src="img/ipad.jpg">
                     <span class="anton">HOW TO GET GOOGLE TO LIKE YOU</span>
-<!--                </div>-->
+                    <!--                </div>-->
 
-<!--                <div id="twitter-feed">-->
-<!--                    <i class="fab fa-twitter"></i>-->
-<!--                    <span>LAST TWEET</span>-->
-<!--                    <p  class="abel">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.”</p>-->
-<!--                </div>-->
-            </div>
-            <div id="twitter-feed">
-                <i class="fab fa-twitter"></i>
-                <span>LAST TWEET</span>
-                <p  class="abel">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.”</p>
-            </div>
-        </section>
-    </div>
-</main>
+                    <!--                <div id="twitter-feed">-->
+                    <!--                    <i class="fab fa-twitter"></i>-->
+                    <!--                    <span>LAST TWEET</span>-->
+                    <!--                    <p  class="abel">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.”</p>-->
+                    <!--                </div>-->
+                </div>
+                <div id="twitter-feed">
+                    <i class="fab fa-twitter"></i>
+                    <span>LAST TWEET</span>
+                    <p class="abel">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua.”</p>
+                </div>
+            </section>
+        </div>
+    </main>
 </div>
 </body>
 </html>
