Cleaned code + adjusted 1200 size

--- a/design-project.html
+++ b/design-project.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Placeholder</title>
-    <!--google font load-out -->
+    <!--GOOGLE FONT LOAD OUT -->
     <link href="https://fonts.googleapis.com/css?family=Abel|Anton&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/design-project.css">
-
+    <!--FONT AWESOME LOGO-->
     <script src="https://kit.fontawesome.com/7a21f128e2.js" crossorigin="anonymous"></script>
 
 
 </head>
 <body>
+
 <div id="large-breakpoint-container">
     <main id="main-content">
 
@@ -91,7 +92,6 @@
                     </div>
                 </div>
             </div>
-
             <hr>
         </section>
 
@@ -184,11 +184,14 @@
                     <!--                    <p  class="abel">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.”</p>-->
                     <!--                </div>-->
                 </div>
+
                 <div id="twitter-feed">
                     <i class="fab fa-twitter"></i>
                     <span>LAST TWEET</span>
-                    <p class="abel">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                        incididunt ut labore et dolore magna aliqua.”</p>
+                    <p class="abel">
+                        “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua.”
+                    </p>
                 </div>
             </section>
         </div>
