working on spacing and cleanliness TODO-CODECLEANUP MORE SPIFFING UP

--- a/design-project.html
+++ b/design-project.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Placeholder</title>
+    <title>Wireframes for CODEUP DESIGN</title>
     <!--GOOGLE FONT LOAD OUT -->
     <link href="https://fonts.googleapis.com/css?family=Abel|Anton&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/design-project.css">
