--- a/design-project.html
+++ b/design-project.html
@@ -49,19 +49,19 @@
         <nav class="nav-style" id="native-nav">
             <ul id="native-nav-list">
                 <li>
-                    <a href="" class="abel">SERVICES</a>
+                    <a href="#" class="abel">SERVICES</a>
                 </li>
 
                 <li>
-                    <a href="" class="abel">WORK</a>
+                    <a href="#" class="abel">WORK</a>
                 </li>
 
                 <li>
-                    <a href="" class="abel">BLOG</a>
+                    <a href="#" class="abel">BLOG</a>
                 </li>
 
                 <li>
-                    <a href="" class="abel">CONTACT</a>
+                    <a href="#" class="abel">CONTACT</a>
                 </li>
             </ul>
         </nav>
@@ -165,17 +165,17 @@
 
                     <!--                <div>-->
                     <img src="img/mobile-phone.jpg">
-                    <span class="anton">THE ADMIN BAR AND ABSOLUTE POSITIONING</span>
+                    <span class="anton fsubhead">THE ADMIN BAR AND ABSOLUTE POSITIONING</span>
                     <!--                </div>-->
 
                     <!--                <div>-->
                     <img src="img/head.jpg">
-                    <span class="anton">NIBBLER AWESOME WEBSITE TESTING</span>
+                    <span class="anton fsubhead">NIBBLER AWESOME WEBSITE TESTING</span>
                     <!--                </div>-->
 
                     <!--                <div>-->
                     <img src="img/ipad.jpg">
-                    <span class="anton">HOW TO GET GOOGLE TO LIKE YOU</span>
+                    <span class="anton fsubhead">HOW TO GET GOOGLE TO LIKE YOU</span>
                     <!--                </div>-->
 
                     <!--                <div id="twitter-feed">-->
